<resources>
    <string name="app_name">Fresh Wallpapers</string>
    <string name="some_text">some text</string>
    <string name="collections">Collections</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="setWallpaper_done">Done!</string>
    <string name="preview_image">preview image</string>
    <string name="settings_title">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="ok">OK</string>
    <string name="back">BACK</string>
    <string name="cancel">Cancel</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="apply">Apply</string>
    <string name="info">Info</string>
    <string name="like">Like</string>
    <string name="save">Save</string>
    <string name="liked_images">Liked images</string>
    <string name="image_saved">Image saved.</string>
    <string name="source">Source:\n%s</string>
    <string name="id">Id:\n%s</string>
    <string name="author">Author:\n%s</string>
    <string name="source_reference">Source reference:\n%s</string>
    <string name="set_home_screen">Set home screen</string>
    <string name="set_lock_screen">Set lock screen</string>
    <string name="set_both">Set both</string>
    <string name="search_images">Search images</string>
    <string name="got_it">Got it</string>

    <string name="collection_error">Error: collection is null</string>
    <string name="setWallpaper_error">Error: image has not been loaded</string>
    <string name="shared_prefs_error">Error: SharedPrefs is null.</string>
    <string name="error_when_saving_image">Error when saving image.</string>
    <string name="loading_error">Loading error.</string>
    <string name="no_permission">No permission to access photo and media.</string>
    <string name="no_results_found">No results found.</string>
    <string name="remote_server_error">Remote server error.</string>
    <string name="network_error_message">Check connection. Use VPN if PIXABAY.COM is banned in your country.</string>
    <string name="privacy_policy">Privacy policy</string>
</resources>