<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.settings.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:title="@string/settings_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Linear layouts are used here for smooth tap animation-->

    <LinearLayout
        android:id="@+id/layout_appearance"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/settings_toolbar"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/tv_appearance"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/appearance"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry"
            />

        <TextView
            android:id="@+id/tv_current_mode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:text="light"
            android:gravity="end|center_vertical"
            android:paddingEnd="16dp"
            tools:ignore="RtlSymmetry"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_privacy"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@id/layout_appearance"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textSize="20sp"
            android:layout_weight="1"
            android:text="@string/privacy_policy"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            tools:ignore="RtlSymmetry"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>